Fix map overflow freakout

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -182,6 +182,7 @@ a {
   padding: 20px;
   text-align: center;
   display: table;
+  overflow: hidden;
 
   #fullpage & {
     height: 100vh;
